# amazon_tool

./: .env.example  .gitignore  API_DOCS_GUIDE.md  CLAUDE.md  CLAUDE_TEMPLATE_v2.md  DEMO_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  QUICK_START_GUIDE.md  README.md  TEST_COVERAGE_REPORT.md  alembic.ini  demo_app.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.simple.yml  docker-compose.yml  generate_api_docs.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_competition_tables.sql  setup_demo_db.py
alembic/: env.py
api_docs/: api_reference.md  openapi.json  redoc.html  swagger.html
data/config/: asin_roles.txt
docs/: DATABASE_DESIGN.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_NOTES.md  M2_TESTING_GUIDE.md  M5_IMPLEMENTATION.md  M6_DEPLOYMENT.md  OFFLINE_BACKFILL_RUNBOOK.md  PROJECT_PLAN.md  REAL_DATA_MIGRATION_GUIDE.md  TASK_OFFLINE_BACKFILL.md  TEST_STRATEGY.md
docs/design/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_DESIGN.md  DESIGN_DECISIONS.md  READ_THIS_FIRST.md  TASK_OFFLINE_BACKFILL.md  data_parsing_rebuild_plan.md
docs/instruction/: OFFLINE_BACKFILL_RUNBOOK.md  TROUBLESHOOTING.md
docs/results/: DOCKER_DEPLOYMENT.md
monitoring/: prometheus.yml  redis.conf
monitoring/rules/: alerts.yml
nginx/: nginx.conf  nginx.dev.conf  nginx.simple.conf
scripts/: build.sh  deploy.sh  dev.sh  quick-test.sh  simple-deploy.sh  test.sh
src/main/: __init__.py  app.py  config.py  database.py  main.py  tasks.py
src/test/: conftest.py
swagger-ui/: config.js  index.html
tools/: README.md  generate_test_data.py
(+61 files in other folders)
